Remove unnecessary options under user and auth tags on Swagger
